--- a/otheractivities.html
+++ b/otheractivities.html
@@ -133,7 +133,7 @@
                 </div>
              </div>
             </div>
-            <div class="row align-items-center" id="kayaking">
+            <div class="row align-items-center" id="kaiaking">
                 <div class="col-md-5">
                    <div class="titlepage">
                      <h2>Kayaking</h2>
