--- a/hotels.html
+++ b/hotels.html
@@ -169,13 +169,13 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/setam1.jpg" class="d-block w-100" alt="Setam Lodge Image 1">
+                              <img src="images/hotels/setam1.webp" class="d-block w-100" alt="Setam Lodge Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/setam2.jpg" class="d-block w-100" alt="Setam Lodge Image 2">
+                              <img src="images/hotels/setam2.webp" class="d-block w-100" alt="Setam Lodge Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/setam3.jpg" class="d-block w-100" alt="Setam Lodge Image 3">
+                              <img src="images/hotels/setam3.webp" class="d-block w-100" alt="Setam Lodge Image 3">
                            </div>
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -273,16 +273,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/centrest1.jpeg" class="d-block w-100" alt="Centrest Image 1">
+                              <img src="images/hotels/centrest1.webp" class="d-block w-100" alt="Centrest Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/centrest2.jpeg" class="d-block w-100" alt="Centrest Image 2">
+                              <img src="images/hotels/centrest2.webp" class="d-block w-100" alt="Centrest Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/centrest3.jpeg" class="d-block w-100" alt="Centrest Image 3">
+                              <img src="images/hotels/centrest3.webp" class="d-block w-100" alt="Centrest Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/centrest4.jpeg" class="d-block w-100" alt="Centrest Image 4">
+                              <img src="images/hotels/centrest4.webp" class="d-block w-100" alt="Centrest Image 4">
                            </div>
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -373,16 +373,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/foretaustral1.jpeg" class="d-block w-100" alt="Foret Austral Image 1">
+                              <img src="images/hotels/foretaustral1.webp" class="d-block w-100" alt="Foret Austral Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/foretaustral2.jpeg" class="d-block w-100" alt="Foret Austral Image 2">
+                              <img src="images/hotels/foretaustral2.webp" class="d-block w-100" alt="Foret Austral Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/foretaustral2.1.jpeg" class="d-block w-100" alt="Foret Austral Image 3">
+                              <img src="images/hotels/foretaustral2.1.webp" class="d-block w-100" alt="Foret Austral Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/foretaustral3.jpeg" class="d-block w-100" alt="Foret Austral Image 4">
+                              <img src="images/hotels/foretaustral3.webp" class="d-block w-100" alt="Foret Austral Image 4">
                            </div>
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -469,13 +469,13 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/grenat1.jpeg" class="d-block w-100" alt="Grenat Image 1">
+                              <img src="images/hotels/grenat1.webp" class="d-block w-100" alt="Grenat Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/grenat2.jpeg" class="d-block w-100" alt="Grenat Image 2">
+                              <img src="images/hotels/grenat2.webp" class="d-block w-100" alt="Grenat Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/grenat3.jpeg" class="d-block w-100" alt="Grenat Image 3">
+                              <img src="images/hotels/grenat3.webp" class="d-block w-100" alt="Grenat Image 3">
                            </div>
                           
                      </div>
@@ -560,16 +560,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/ihary1.jpeg" class="d-block w-100" alt="Ihary Image 1">
+                              <img src="images/hotels/ihary1.webp" class="d-block w-100" alt="Ihary Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/ihary2.jpeg" class="d-block w-100" alt="Ihary Image 2">
+                              <img src="images/hotels/ihary2.webp" class="d-block w-100" alt="Ihary Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/ihary3.jpeg" class="d-block w-100" alt="Ihary Image 3">
+                              <img src="images/hotels/ihary3.webp" class="d-block w-100" alt="Ihary Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/ihary4.jpeg" class="d-block w-100" alt="Ihary Image 4">
+                              <img src="images/hotels/ihary4.webp" class="d-block w-100" alt="Ihary Image 4">
                            </div>                         
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -656,13 +656,13 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/chezjose1.jpeg" class="d-block w-100" alt="Chez Jose Image 1">
+                              <img src="images/hotels/chezjose1.webp" class="d-block w-100" alt="Chez Jose Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/chezjose2.jpeg" class="d-block w-100" alt="Chez Jose Image 2">
+                              <img src="images/hotels/chezjose2.webp" class="d-block w-100" alt="Chez Jose Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/chezjose3.jpeg" class="d-block w-100" alt="Chez Jose Image 3">
+                              <img src="images/hotels/chezjose3.webp" class="d-block w-100" alt="Chez Jose Image 3">
                            </div>                     
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -750,13 +750,13 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/gaspard1.jpeg" class="d-block w-100" alt="Gaspard Image 1">
+                              <img src="images/hotels/gaspard1.webp" class="d-block w-100" alt="Gaspard Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/gaspard2.jpeg" class="d-block w-100" alt="Gaspard Image 2">
+                              <img src="images/hotels/gaspard2.webp" class="d-block w-100" alt="Gaspard Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/gaspard3.jpeg" class="d-block w-100" alt="Gaspard Image 3">
+                              <img src="images/hotels/gaspard3.webp" class="d-block w-100" alt="Gaspard Image 3">
                            </div>                     
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -849,16 +849,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/manja1.jpeg" class="d-block w-100" alt="Manja Image 1">
+                              <img src="images/hotels/manja1.webp" class="d-block w-100" alt="Manja Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/manja2.jpeg" class="d-block w-100" alt="Manja Image 2">
+                              <img src="images/hotels/manja2.webp" class="d-block w-100" alt="Manja Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/manja2.1.jpeg" class="d-block w-100" alt="Manja Image 3">
+                              <img src="images/hotels/manja2.1.webp" class="d-block w-100" alt="Manja Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/manja3.jpeg" class="d-block w-100" alt="Manja Image 4">
+                              <img src="images/hotels/manja3.webp" class="d-block w-100" alt="Manja Image 4">
                            </div>                         
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -952,28 +952,28 @@
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/thermal1.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/thermal1.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/thermal2.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/thermal2.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/thermal3.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/thermal3.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/thermal4.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/thermal4.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
@@ -1060,16 +1060,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/audominatur1.jpeg" class="d-block w-100" alt="Au Domnatur Image 1">
+                              <img src="images/hotels/audominatur1.webp" class="d-block w-100" alt="Au Domnatur Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/audominatur2.jpeg" class="d-block w-100" alt="Au Domnatur Image 2">
+                              <img src="images/hotels/audominatur2.webp" class="d-block w-100" alt="Au Domnatur Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/audominatur3.jpeg" class="d-block w-100" alt="Au Domnatur Image 3">
+                              <img src="images/hotels/audominatur3.webp" class="d-block w-100" alt="Au Domnatur Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/audominatur4.jpeg" class="d-block w-100" alt="Au Domnatur Image 4">
+                              <img src="images/hotels/audominatur4.webp" class="d-block w-100" alt="Au Domnatur Image 4">
                            </div>                         
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -1148,16 +1148,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/soaguest1.jpeg" class="d-block w-100" alt="Soa Guest Image 1">
+                              <img src="images/hotels/soaguest1.webp" class="d-block w-100" alt="Soa Guest Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/soaguest1.1.jpeg" class="d-block w-100" alt="Soa Guest Image 2">
+                              <img src="images/hotels/soaguest1.1.webp" class="d-block w-100" alt="Soa Guest Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/soaguest2.jpeg" class="d-block w-100" alt="Soa Guest Image 3">
+                              <img src="images/hotels/soaguest2.webp" class="d-block w-100" alt="Soa Guest Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/soaguest3.jpeg" class="d-block w-100" alt="Soa Guest Image 4">
+                              <img src="images/hotels/soaguest3.webp" class="d-block w-100" alt="Soa Guest Image 4">
                            </div>                         
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -1240,16 +1240,16 @@
                      <!-- Carousel Items -->
                      <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/hotels/karibou1.jpeg" class="d-block w-100" alt="Karibou Image 1">
+                              <img src="images/hotels/karibou1.webp" class="d-block w-100" alt="Karibou Image 1">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/karibou1.1.jpeg" class="d-block w-100" alt="Karibou Image 2">
+                              <img src="images/hotels/karibou1.1.webp" class="d-block w-100" alt="Karibou Image 2">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/karibou2.jpeg" class="d-block w-100" alt="Karibou Image 3">
+                              <img src="images/hotels/karibou2.webp" class="d-block w-100" alt="Karibou Image 3">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/hotels/karibou3.jpeg" class="d-block w-100" alt="Karibou Image 4">
+                              <img src="images/hotels/karibou3.webp" class="d-block w-100" alt="Karibou Image 4">
                            </div>                         
                      </div>
                      <!-- Arrows to navigate the carousel -->
@@ -1327,28 +1327,28 @@
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/mirary1.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/mirary1.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/mirary2.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/mirary2.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/mirary3.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/mirary3.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div id="serv_hover" class="room">
                            <div class="room_img">
-                              <figure><img src="images/hotels/mirary4.jpeg" alt="#" class="img-fluid"/></figure>
+                              <figure><img src="images/hotels/mirary4.webp" alt="#" class="img-fluid"/></figure>
                            </div>
                         </div>
                      </div>
