--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/setam1.jpg" alt="#"/></figure>
+                        <figure><img src="images/hotels/setam1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Setam Lodge</h3>
@@ -148,7 +148,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/centrest1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/centrest1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Centrest</h3>
@@ -159,7 +159,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/foretaustral1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/foretaustral1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Foret Austral</h3>
@@ -170,7 +170,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/grenat1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/grenat1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Grenat</h3>
@@ -181,7 +181,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/ihary1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/ihary1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Ihary</h3>
@@ -192,7 +192,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/chezjose1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/chezjose1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Chez Jose</h3>
@@ -203,7 +203,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/gaspard1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/gaspard1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Chez Gaspard</h3>
@@ -214,7 +214,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/manja1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/manja1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Manja</h3>
@@ -225,7 +225,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/thermal1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/thermal1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Thermal</h3>
@@ -236,7 +236,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/audominatur1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/audominatur1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Au Domnatur</h3>
@@ -247,7 +247,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/soaguest1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/soaguest1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Soa Guest</h3>
@@ -258,7 +258,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/karibou1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/karibou1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Karibou Hotel</h3>
@@ -269,7 +269,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/mirary1.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/mirary1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Mirary</h3>
@@ -280,7 +280,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/other-hotels.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/other-hotels.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Chez Rose, Hotel In-Kavana</h3>
@@ -291,7 +291,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/other-hotels.jpeg" alt="#"/></figure>
+                        <figure><img src="images/hotels/other-hotels.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Coin D’Or, La Palmeraie</h3>
