--- a/contact.html
+++ b/contact.html
@@ -100,8 +100,8 @@
                <p>For any inquiries or donations, please contact us through the following methods:</p>
                <br>
                <ul class="contact-links">
-                  <li><a href="mailto:contact@ranomafanaparkinfo.mg">Email Us: contact@ranomafanaparkinfo.mg</a></li>
-                  <li><a href="tel:+261xxxxxxxx">Call Us: +261 xx xxx xx</a></li>
+                  <li>Madagascar National Parks head of Tourism :  <a href="tel:+261380940101">+261 38 09 401 01</a></li>
+                  <br><li>Head of Operations at Ranomafana National Park :  <a href="tel:+261380940102">+261 38 09 401 02</a></li>
                </ul>
             </div>
          </div>
