--- a/howtoget.html
+++ b/howtoget.html
@@ -105,8 +105,8 @@
                     </div>
                  </div>
              </div>
-             <div class="row">
-                <div class="col-md-12">
+             <div class="row align-items-center">
+                <div class="col-md-8">
                    <div class="titlepage">
                      <h2>Cotisse Bus</h2>
                       <p class="margin_0">Book a seat in a Cotisse car by calling/Whatsapp messaging the Cotisse Antananarivo station at (+261 32 11 027 10) or by going in person to the station. Seats have to be paid for at least 24 hours before departure either online using Paypal or MVola money, or in person at any of their stations. Seats to Fianarantsoa will cost 40 000 MGA each, and buses run there daily/nightly. The drive will take 12 hours with regular bathroom breaks and one lunch break. If you choose to take the daytime bus, you will arrive in Fianarantsoa at 7pm. Local buses to Ranomafana will not be running then, and so it is best to overnight in the city. There are several good hotel options, including Zomatel and Hotel Vannie, that typically have open rooms and cost between 50 000 - 90 000 MGA per night. In the morning, you can go to the local bus station at any time and take a regional brousse (bus) straight to Ranomafana for 7 000 MGA per person. That drive is about 2.5 hours – use the restroom before getting in! If you choose to take the nighttime bus, you will arrive in Fianarantsoa in the morning and can head directly to the local brousse station to make the transfer to Ranomafana. 
@@ -116,18 +116,34 @@
 
                     </div>
                 </div>
+                <div class="col-md-4 text-center">
+                  <div class="about_img">
+                     <figure><img src="images/cotisse.webp" class="img-fluid" alt="#"/></figure>
+                  </div>
+               </div>
                 <br>
              </div>
-             <div class="row">
-                <div class="col-md-12">
-                   <div class="titlepage">
-                     <h2>Soatrans Bus</h2>
-                      <p class="margin_0">Similar to Cotisse, you can book a seat in a Soatrans bus by calling in advance at (+261 32 11 905 00) or by going in person to the station. Seats have to be paid for 24 hours before departure in person. Seats cost 65 000 MGA to Manakara, which will leave Tana at 1:30pm and drive you past Ranomafana at around 3am where you are able to exit the car. Ranomafana is safe and calm at night, and depending on where your hotel is you will have only a short walk once dropped off in town (if your hotel is SETAM, Foret Austral, Au Dominatur, or Karibotel, I recommend leaving the bus in front of the hotels and not in town). Alternatively, seats to Fianarantsoa cost 45 000 MGA and you can follow the same instructions as above. </p>
+             <div class="row align-items-center">
+               <div class="col-md-12">
+                  <div class="titlepage">
+                    <h2>Soatrans Bus</h2>
+                  </div>
+               </div>
 
-                    </div>
-                </div>
+
+                <div class="col-md-4 text-center">
+                  <div class="about_img">
+                     <figure><img src="images/soatrans.webp" class="img-fluid" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-8">
+                  <div class="titlepage">
+                     <p class="margin_0">Similar to Cotisse, you can book a seat in a Soatrans bus by calling in advance at (+261 32 11 905 00) or by going in person to the station. Seats have to be paid for 24 hours before departure in person. Seats cost 65 000 MGA to Manakara, which will leave Tana at 1:30pm and drive you past Ranomafana at around 3am where you are able to exit the car. Ranomafana is safe and calm at night, and depending on where your hotel is you will have only a short walk once dropped off in town (if your hotel is SETAM, Foret Austral, Au Dominatur, or Karibotel, I recommend leaving the bus in front of the hotels and not in town). Alternatively, seats to Fianarantsoa cost 45 000 MGA and you can follow the same instructions as above. </p>
+                   </div>
+               </div>
                 <br>
              </div>
+             <br>
              <div class="row">
                 <div class="col-md-12">
                    <div class="titlepage">
