--- a/otheractivities.html
+++ b/otheractivities.html
@@ -85,7 +85,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Information on other activities to do in Ranomafana</h2>
+                     <h2>Other Activities in Ranomafana</h2>
+                     <h6 style="color: white;">hot springs, kayaking, arboretum, Centre Valbio, waterfall hikes</h6>
+
                   </div>
                </div>
             </div>
@@ -108,7 +110,7 @@
                </div>
                <div class="col-md-7 text-center" >
                   <div class="about_img">
-                     <figure><img src="images/piscine.jpg" class="img-fluid" alt="#"/></figure>
+                     <figure><img src="images/piscine.webp" class="img-fluid" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-12">
@@ -116,7 +118,7 @@
              </div>
              <div class="col-md-6 text-center">
                 <div class="about_img">
-                    <figure><img src="images/bain1.jpg" class="img-fluid" alt="#"/></figure>
+                    <figure><img src="images/bain1.webp" class="img-fluid" alt="#"/></figure>
                 </div>
              </div>
              <div class="col-md-6 ">
@@ -127,12 +129,19 @@
              <div class="col-md-12">
                 <br>
                              </div>
+                             <div class="col-md-12">
+                              <div class="titlepage">
+                                 <p class="margin_0">If the public pool is not to your taste, there are several private options that may appeal instead. At the same ticket booth for the public pool, you will find the option for private baths. This entails a private room with a tiled bathtub connected to a thermal water spigot and a cold water spigot. Your purchase of a ticket (again 5 000 MGA for international visitors and 1 000 MGA for Malagasy visitors) will grant you access to one bath room for one hour. Multiple people are welcome in one room at once so long as they each purchase their own ticket. When considering this bathing option, please note you will be expected to bring your own towels and any soap you want to use as nothing is provided aside from hot and cold water. After your hour is up, the hot tub and room get thoroughly cleaned before the next visitor. The private baths have a room reserved for massages that can be booked at the ticket counter. Prices vary on type of massage and length. The baths are open 6:00am-5:00pm daily, and are closed Wednesday for deep cleaning.
+                                 </p>
+                              </div>
+                           </div>
              <div class="col-md-12">
                 <div class="titlepage">
                    <p class="margin_0">Finally, if you’re looking for perhaps a more familiar hot-tub like experience, complete with poolside food and beverage service, your best thermal option in Ranomafana is the private pools at Hotel Thermal. These three small thermal pools seat up to 8 people each and need to be booked in advance with the hotel front desk. Prices are 20k per person for several hours. The hotel provides changing rooms, bathrooms, cold showers, and towels. You are able to book the hot spring pools for any time, including late into the evening/night. You are also able to order alcoholic and non alcoholic beverages to be enjoyed in the pool. </p>
                 </div>
              </div>
             </div>
+            <br>
             <div class="row align-items-center" id="kaiaking">
                 <div class="col-md-5">
                    <div class="titlepage">
@@ -142,7 +151,7 @@
                 </div>
                 <div class="col-md-7 text-center">
                    <div class="about_img">
-                      <figure><img src="images/kayak.jpg" class="img-fluid" alt="#"/></figure>
+                      <figure><img src="images/kayaking.webp" class="img-fluid" alt="#"/></figure>
                    </div>
                 </div>
                 <br>
@@ -154,11 +163,13 @@
               </div>
  
              </div>
+             <br>
+
              <div class="row align-items-center" id="arboretum">
 
                 <div class="col-md-7 text-center">
                    <div class="about_img">
-                      <figure><img src="images/arboretum.jpg" width="75%"  class="img-fluid" alt="#"/></figure>
+                      <figure><img src="images/arboretum.webp" width="75%"  class="img-fluid" alt="#"/></figure>
                    </div>
                 </div>
                 <div class="col-md-5">
@@ -173,6 +184,8 @@
                 <br>
  
              </div>
+             <br>
+
              <div class="row align-items-center" id="valbio">
                 <div class="col-md-5">
                    <div class="titlepage">
@@ -184,15 +197,17 @@
                 </div>
                 <div class="col-md-7 text-center">
                    <div class="about_img">
-                      <figure><img src="images/valbio.jpg" class="img-fluid" alt="#"/></figure>
+                      <figure><img src="images/valbio.webp" class="img-fluid" alt="#"/></figure>
                    </div>
                 </div>
                 <br>
              </div>
+             <br>
+
              <div class="row align-items-center" id="waterfall">
              <div class="col-md-7">
                    <div class="about_img text-center ">
-                      <figure><img src="images/waterfall.jpg" class="img-fluid" alt="#"/></figure>
+                      <figure><img src="images/water.webp" class="img-fluid" alt="#"/></figure>
                    </div>
                 </div>
                 <div class="col-md-5">
