--- a/parkinformation.html
+++ b/parkinformation.html
@@ -97,12 +97,49 @@
       <div class="about">
          <div class="container-fluid">
             <div class="row">
+               <div class="row align-items-center">
+                  <div class="col-md-8 ">
+                     <div class="titlepage">
+                     <p class="margin_0">Ranomafana National Park was established as Madagascar’s fourth national park in 1991, and further established as a UNESCO World Heritage Site in 2007. Today it protects over 43,650 hectares of mountainous rainforest and is considered one of the island's most important conservation sites for its treasure trove of endemic flora and fauna. It is the fourth most visited national park in Madagascar by international tourists, and for good reason! Along Ranomafana’s numerous hiking circuits visitors can find 13 different species of lemurs including the famous Golden bamboo lemur, Greater bamboo lemur, and Milne-Edwards sifaka. Visitors can also anticipate seeing any of the 118 species of unique birds, 30 of which are endemic to Ranomafana, such as the forest ibis, ground rollers, and blue vangas. The park contains as well a host of well-camouflaged and incredibly cool reptiles like the satanic leaf-tailed gecko, the mossy leaf-tailed gecko, and the Madagascar boa. </p>
+                  </div>
+                  </div>
+                  <div class="col-md-4 text-center">
+                     <div class="about_img">
+                        <figure><img src="images/parc5.webp" class="img-fluid" alt="#"/></figure>
+                     </div>
+                  </div>
+               </div>
+               <br>
+               <div class="row align-items-center">
+                  <div class="col-md-4">
+                     <div class="about_img">
+                        <figure><img src="images/parc3.webp" class="img-fluid" alt="#"/></figure>
+                     </div>
+                  </div>
+                  <div class="col-md-8 ">
+                     <div class="titlepage">
+                        <p class="margin_0">The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents. </p>
+                  </div>
+               </div>
+               </div>
+               <br>
+               <div class="row align-items-center">
+                  <div class="col-md-8 ">
+                     <div class="titlepage">
+                        <p class="margin_0">Other circuits available include Vatoharanana, Valohoaka, Sahamalaotra. Each of these circuits give you a unique glimpse into Ranomafana, and each has varying degrees of difficulty. It is important to note that whichever circuit you choose, expressing your physical ability and concerns to guides is always welcome, and they are more than capable of adjusting the route they take you on to fit your goals. </p>
+                     </div>
+                     </div>
+                  <div class="col-md-4">
+                     <div class="about_img">
+                        <figure><img src="images/parc8.webp" class="img-fluid" alt="#"/></figure>
+                     </div>
+                  </div>
+
+               </div>
+               </div>
+               <br>
                <div class="col-md-12">
                   <div class="titlepage">
-                    
-                     <p class="margin_0">Ranomafana National Park was established as Madagascar’s fourth national park in 1991, and further established as a UNESCO World Heritage Site in 2007. Today it protects over 43,650 hectares of mountainous rainforest and is considered one of the island's most important conservation sites for its treasure trove of endemic flora and fauna. It is the fourth most visited national park in Madagascar by international tourists, and for good reason! Along Ranomafana’s numerous hiking circuits visitors can find 13 different species of lemurs including the famous Golden bamboo lemur, Greater bamboo lemur, and Milne-Edwards sifaka. Visitors can also anticipate seeing any of the 118 species of unique birds, 30 of which are endemic to Ranomafana, such as the forest ibis, ground rollers, and blue vangas. The park contains as well a host of well-camouflaged and incredibly cool reptiles like the satanic leaf-tailed gecko, the mossy leaf-tailed gecko, and the Madagascar boa. </p>
-                     <p class="margin_0">The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents. </p>
-                     <p class="margin_0">Other circuits available include Vatoharanana, Valohoaka, Sahamalaotra. Each of these circuits give you a unique glimpse into Ranomafana, and each has varying degrees of difficulty. It is important to note that whichever circuit you choose, expressing your physical ability and concerns to guides is always welcome, and they are more than capable of adjusting the route they take you on to fit your goals. </p>
                      <p class="margin_0">Overall pricing depends largely on the circuit and guide chosen, and what you're hoping to get out of Ranomafana National Park. Each visitor must purchase a ticket to enter, and pay for the guide fees of the local guide who will show you around the forest.</p>
                      <p class="margin_0"><b><u>Tickets are priced as such:</u></b></p>
                         <ul style="text-align: left;">
