--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                   <div class="titlepage">
                      <h2>Welcome to Ranomafana! </h2>
                      <p>
-                        This website was designed in collaboration with the United States Peace Corps and Madagascar National Parks with you in mind. It is our biggest goal to attract tourists who prefer independent travel, designing their own vacation, and full immersion to this tropical paradise. It is our next biggest goal to help you make the absolute most of your visit once you do arrive! 
-                     </p>
+                        It is our goal to attract tourists to this tropical paradise who prefer to travel independently, design their own vacation, and immerse themselves fully in culture. It is also our goal to help you make the absolute most of your visit to Ranomafana once you do arrive!</p>
                   </div>
                </div>
                <div class="col-md-7">
@@ -112,11 +111,7 @@
                   <div class="titlepage">
                      <br>
                      <p>
-                        You’ll find several tabs of information here to make booking your trip to Ranomafana easy and simple. The first is everything you might need to know about hotels, including prices, amenities, and contact information. Most hotels here are not yet online, which can make making a reservation quite tricky as a tourist from abroad. The next tab will include information on Ranomafana National Park, the town’s main attraction. This will help to set you up nicely for all the nature and hikes you hope to do. The next tab provides information on other activities that you can (and should!) participate in around town. This includes waterfall hikes, hot springs, kayaking, and more - be sure to check it out. Next is important information on how exactly to get to town from Antananarivo via multiple forms of transportation. This can be tricky, but this information will set you straight. Finally, we dive into educational information on how your ecotourism supports conservation, provide a donation link to Madagascar National Parks, and share a basic map of Ranomafana town.
-                     </p>
-                     <p>
-                        We look forward to welcoming you to Ranomafana, and hope to see you soon!
-                     </p> 
+                        On this website you will find several tabs of information to make booking your trip to Ranomafana easy and simple. The first tab includes everything you might need to know about hotels in town – including prices, amenities, and contact information. If you're worried about an international phone call, check to see if the contact is available on WhatsApp! Don't forget to see where the hotel is on the map. The next tab includes information on Ranomafana National Park, the town’s main tourist attraction. This tab will help set up all the hikes you hope to do, as it provides guidance on buying tickets, arranging guides, and what kinds of circuits are available. You'll also find a tab here on information about other activities that you can (and should!) participate in around town. This includes waterfall hikes, hot springs, kayaking, and more – be sure to check it out. Next you'll see important information on how exactly to get to town from Antananarivo via multiple forms of transportation. This can be tricky, but fear not, this will have all the information you may need. This website will also give you some educational context and information on how your ecotourism supports biodiversity conservation efforts in Ranomafana. And finally, you can find contact information should you have any questions, and a map of Ranomafana town itself                     </p>
                   </div>
                </div>
             </div>
@@ -261,7 +256,7 @@
                         <figure><img src="images/hotels/karibou1.webp" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Karibou Hotel</h3>
+                        <h3>Karibotel</h3>
                         <a class="read_more" href="hotels.html#karibou"> More</a>
                      </div>
                   </div>
@@ -422,6 +417,61 @@
                   </div>
                </div>
               
+            </div>
+         </div>
+      </div>
+      <!-- end gallery -->
+       <!-- gallery -->
+      <div  class="gallery">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="titlepage">
+                     <h2>gallery</h2>
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc7.webp"#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc2.webp" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc3.webp" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc4.webp" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc1.webp" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc6.webp" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc11.webp" alt="#"/></figure>
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
+                  <div class="gallery_img">
+                     <figure><img src="images/parc12.webp" alt="#"/></figure>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
