--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
                                 <a class="nav-link" href="otheractivities.html">Other_Activities</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="howtoget.html">How_to_get_to_town</a>
+                                <a class="nav-link" href="howtoget.html">How to get to town</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="educational.html">Education</a>
+                                <a class="nav-link" href="educational.html">Conservation</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="contact.html">Contact</a>
