--- a/educational.html
+++ b/educational.html
@@ -60,7 +60,7 @@
                                 <a class="nav-link" href="howtoget.html">How_to_get_to_town</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="educational.html">Education</a>
+                                <a class="nav-link" href="educational.html">Conservation</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
