--- a/educational.html
+++ b/educational.html
@@ -54,11 +54,11 @@
                                 <a class="nav-link" href="parkinformation.html">Park</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="otheractivities.html">Other_Activities</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="howtoget.html">How_to_get_to_town</a>
-                            </li>
+                              <a class="nav-link" href="otheractivities.html">Other Activities</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="howtoget.html">How to get to town</a>
+                          </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="educational.html">Conservation</a>
                             </li>
