--- a/otheractivities.html
+++ b/otheractivities.html
@@ -191,8 +191,8 @@
                    <div class="titlepage">
                      <h2>Centre Valbio</h2>
                       <p class="margin_0">Centre ValBio is an American research station founded in 2003 by primatologist Dr. Patricia Wright. Today it is functionally run by a team of Malagasy and American full-time researchers and staff. They regularly host talks about ongoing research, trainings for future researchers, and tours of their facility near the entrance to the national park. </p>
-                        <p>More information on their work and how to visit can be found at their website here: Home | Centre ValBio (stonybrook.edu)
-                        </p>
+                        <p>More information on their work and how to visit can be found at their website here: 
+                           <a href="https://stonybrook.edu" target="_blank">Home | Centre ValBio (stonybrook.edu) </a>                        </p>
                     </div>
                 </div>
                 <div class="col-md-7 text-center">
